# has-some-field

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
tests/: test_macro.rs
